--- a/.travis.yml
+++ b/.travis.yml
@@ -21,20 +21,11 @@ matrix:
     - php: 7.2
       env: WP_VERSION=latest
     - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=4.5
-    - php: 5.6
-      env: WP_VERSION=latest
-    - php: 5.6
       env: WP_VERSION=trunk
-    - php: 5.6
+    - php: 7.0
+      env: WP_VERSION=4.5
+    - php: 7.2
       env: WP_TRAVISCI=phpcs
-    - php: 5.3
-      env: WP_VERSION=latest
-      dist: precise
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -48,6 +39,7 @@ before_script:
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
       composer global require "phpunit/phpunit=4.8.*|5.7.*"
+      composer install
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
