--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
   include:
     - php: 7.2
       env: WP_VERSION=latest
+    - php: 7.2
+      env: WP_TRAVISCI=phpcs
     - php: 7.1
       env: WP_VERSION=trunk
     - php: 7.0
