Try to limit plugin cloning to phpunit

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,15 +48,17 @@ before_script:
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
   - |
-    # Set up the plugin.
-    mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
-    cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
-    # Hop into plugins directory.
-    cd ${WP_CORE_DIR}wp-content/plugins
-    wget https://downloads.wordpress.org/plugin/safe-redirect-manager.zip
-    unzip safe-redirect-manager.zip
-    git clone https://github.com/Automattic/WPCOM-Legacy-Redirector.git
-    cd wp-irving
+    if [[ ! -z "$WP_VERSION" ]] ; then
+      # Set up the plugin.
+      mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
+      cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
+      # Hop into plugins directory.
+      cd ${WP_CORE_DIR}wp-content/plugins
+      wget https://downloads.wordpress.org/plugin/safe-redirect-manager.zip
+      unzip safe-redirect-manager.zip
+      git clone https://github.com/Automattic/WPCOM-Legacy-Redirector.git
+      cd wp-irving
+    fi
 
 script:
   - |
