Remove mkdir and cp, maybe not needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,9 +50,9 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       # Set up the plugin.
-      mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
-      cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
-      # Hop into plugins directory.
+      # mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
+      # cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
+      # # Hop into plugins directory.
       cd ${WP_CORE_DIR}wp-content/plugins
       wget https://downloads.wordpress.org/plugin/safe-redirect-manager.zip
       unzip safe-redirect-manager.zip
