--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_script:
     if [[ ! -z "$WP_VERSION" ]] ; then
       # Set up the plugin.
       mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
-      cwd
+      pwd
       # cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
       # # Hop into plugins directory.
       cd ${WP_CORE_DIR}wp-content/plugins
