--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,7 @@ before_script:
     if [[ ! -z "$WP_VERSION" ]] ; then
       # Set up the plugin.
       mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
-      pwd
-      # cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
+      cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
       # # Hop into plugins directory.
       cd ${WP_CORE_DIR}wp-content/plugins
       wget https://downloads.wordpress.org/plugin/safe-redirect-manager.zip
