--- a/.travis.yml
+++ b/.travis.yml
@@ -50,12 +50,12 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       # Set up the plugin.
-      mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
-      pwd
-      echo "${WP_CORE_DIR}"
-      cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
+      # mkdir -p "${WP_CORE_DIR}wp-content/plugins/wp-irving"
+      # pwd
+      # echo ${WP_CORE_DIR}
+      # cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
       # Hop into plugins directory.
-      cd ${WP_CORE_DIR}wp-content/plugins
+      cd ../
       wget https://downloads.wordpress.org/plugin/safe-redirect-manager.zip
       unzip safe-redirect-manager.zip
       git clone https://github.com/Automattic/WPCOM-Legacy-Redirector.git
