--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ before_script:
       # cp -R . "${WP_CORE_DIR}wp-content/plugins/wp-irving/"
       # Hop into plugins directory.
       cd ../
-      git clone git@github.com:alleyinteractive/safe-redirect-manager.git
+      git clone https://github.com/alleyinteractive/safe-redirect-manager.git
       git clone https://github.com/Automattic/WPCOM-Legacy-Redirector.git wpcom-legacy-redirector
       cd wp-irving
     fi
