--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ matrix:
       env: WP_TRAVISCI=phpcs
     - php: 7.1
       env: WP_VERSION=trunk
-    - php: 7.0
+    - php: 5.3
       env: WP_VERSION=4.5
+      dist: precise
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
