--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
       "email": "noreply@alleyinteractive.com"
     }
   ],
+  "repositories": [
+    {
+        "type": "git",
+        "url": "https://github.com/alleyinteractive/Alley-Coding-Standards"
+    }
+  ],
   "require-dev": {
-    "squizlabs/php_codesniffer": "3.*",
-    "wp-coding-standards/wpcs": "dev-master"
+    "alley/alley-coding-standards": "dev-master"
   },
   "scripts": {
-    "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs",
-    "post-update-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs"
+    "phpcs": "phpcs ."
   }
 }
