--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "alley/alley-coding-standards": "dev-master"
   },
   "scripts": {
-    "phpcs": "phpcs .",
-    "phpcs:fix": "phpcbf ."
+    "phpcs": "phpcs . -p",
+    "phpcbf": "phpcbf ."
   }
 }
