--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "alleyinteractive/wp-irving",
-  "version": "0.5.0",
+  "version": "0.6.0-alpha",
   "authors": [
     {
       "name": "Alley Interactive",
