--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-# Xenial image has PHP versions 5.6,7.1,7.2 pre-installed
-dist: xenial
+# Bionic image has PHP versions 7.1,7.2,7.3 pre-installed
+dist: bionic
 
 # Xenial does not start mysql by default
 services:
   - mysql
+  - memcached
 
 # Declare project language.
 # @link http://about.travis-ci.org/docs/user/languages/php/
@@ -17,13 +18,18 @@ notifications:
 branches:
   only:
     - main
-    - production
 
 cache:
   directories:
     - $HOME/.composer/cache
 
+# Git clone depth.
+git:
+  depth: 1
+  quiet: true
+
 jobs:
+  fast_finish: true
   include:
     - php: 7.3
       env: WP_VERSION=latest
@@ -45,7 +51,7 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=4.8.*|5.7.*"
+      composer global require "phpunit/phpunit=6.1.*"
       composer install
     fi
   - |
@@ -63,6 +69,8 @@ before_script:
 script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
+      # For debugging.
+      which phpunit
       phpunit
       WP_MULTISITE=1 phpunit
     fi
