--- a/.travis.yml
+++ b/.travis.yml
@@ -59,8 +59,7 @@ before_script:
 script:
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      pwd
-      composer run phpcs -- -v
+      composer run phpcs
     fi
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
