Revert "Debug again"
This reverts commit e7e50bc77fd0c98fa52ac2589775bcbe55814096.

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ before_script:
 script:
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      composer run phpcs -- -v
+      composer run phpcs
     fi
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
