Add script for drafting changelogs
- Adds file: bin/script-draft-changelog.sh that formats a list of changes since the last tag
- Adds composer script "changelog" as a shortcut for the above
- Updates the RELEASE.md doc to include a note about this utility

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "phpcs": "phpcs . -p",
-    "phpcbf": "phpcbf ."
+    "phpcbf": "phpcbf .",
+    "changelog": "./bin/script-draft-changelog.sh"
   }
 }
