--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     }
   ],
   "require-dev": {
-    "alleyinteractive/alley-coding-standards": "dev-main"
+    "alleyinteractive/alley-coding-standards": "dev-main",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
     "phpcs": "phpcs . -ps",
